Alignment Issue

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 
   #mockupImg{
     display:block;
-    margin-left: -90px;
+    margin-left: -80px;
     height: 317px;
     width: 450px;
     margin-top: 70px;
